--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <!-- <login></login> -->
+<app-post (EmitEventPostCreated) = "CatchEmittedEvent($event)"></app-post>
+
+<app-post-list [posts]="storedPost"></app-post-list>
+
+
 <router-outlet></router-outlet>
