commited for testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
-<!-- <login></login> -->
-<app-post (EmitEventPostCreated) = "CatchEmittedEvent($event)"></app-post>
-
-<app-post-list [posts]="storedPost"></app-post-list>
 
 
+<!-- <app-create-post></app-create-post> -->
+<!-- <app-login></app-login> -->
+<app-header></app-header>
+<!-- <app-create-post (EmitEventPostCreated)="CatchEmittedEvent($event)"></app-create-post>
+
+<app-list-post [posts]="storedPosts"></app-list-post> -->
+
+<!-- <app-read-json></app-read-json> -->
 <router-outlet></router-outlet>
+
