--- a/src/app/login-success/login-success.component.html
+++ b/src/app/login-success/login-success.component.html
@@ -1,1 +1,6 @@
-<p>login-success works!</p>
+<h1>
+  Welcome to the secured area of our SPA.
+</h1>
+<p>
+  Login success module loaded dynamically.
+</p>
